<resources>
    <string name="app_name">RozFun</string>
    <string name="mail_id">contact@rozfun.in</string>
    <string name="todo">TODO</string>
    <string name="admin_panel">Admin Panel v1.0</string>
    <string name="total_pie_count">Total Pie Count (5,10,0,2....)</string>
    <string name="update">UPDATE</string>
    <string name="spin_now">SPIN NOW</string>
    <string name="got_it">GOT IT</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_now">LOGIN NOW</string>
    <string name="paytm_mid">Paytm MID</string>
    <string name="paytm_mkey">Paytm MKEY</string>
    <string name="razorpay_live_key">Razorpay Live Key</string>
    <string name="razorpay_secret_key">Razorpay Secret Key</string>
    <string name="minimum_deposit">Minimum Deposit</string>
    <string name="minimum_withdraw">Minimum Withdraw</string>
    <string name="cashfree_app_id">Cashfree App ID</string>
    <string name="per_spin_charge">Per Spin Charge</string>
    <string name="deposited">DEPOSITED</string>
    <string name="total_deposit">Total Deposit</string>
    <string name="total_profit">Total Profit</string>
    <string name="total_redeem">Total Redeem</string>
    <string name="deposited_amount">Deposited Amount</string>
    <string name="redeemable_amount">Redeemable Amount</string>
    <string name="full_name">Full Name</string>
    <string name="refer_code_optional">Refer Code (Optional)</string>
    <string name="continues">Continue</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Refer &amp; Earn</string>
    <string name="exit">Exit</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="shareTxt">This will gives you more pleasure when you tired and want to try your luck to win rewards. Download the app now- https://play.google.com/store/apps/details?id=package. Use this code- refercode to get Rs.10 rupees instant in your wallet.</string>
    <string name="balance">Balance</string>
    <string name="add_money">ADD MONEY</string>
    <string name="withdraw">WITHDRAW</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="upi">UPI</string>
    <string name="paytm">Paytm</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="paytm_number">Paytm Number</string>
    <string name="bank_a_c_number">Bank A/C Number</string>
    <string name="upi_or_vpa">UPI or VPA</string>
    <string name="_500">500</string>
    <string name="_200">200</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
    <string name="_20">20</string>
    <string name="deposit_amount">Deposit Amount</string>
</resources>