<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/contact"
        android:icon="@drawable/contact"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/policy"
        android:icon="@drawable/policy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/refund"
        android:icon="@drawable/refund"
        android:title="@string/refund_policy" />
    <item
        android:id="@+id/disclaimer"
        android:icon="@drawable/disclaimer"
        android:title="@string/disclaimer" />
    <item
        android:id="@+id/rate"
        android:icon="@drawable/rate"
        android:title="@string/rate_us" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share_app" />
    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit" />
</menu>