<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/title"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowRadius="2"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/nn"
        android:padding="13dp"
        android:hint="@string/withdraw_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:autofillHints="amount"
        android:inputType="number" />
    <RadioGroup
        android:id="@+id/group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/paytm"
            android:text="@string/paytm"
            android:layout_margin="5dp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/upi"
            android:text="@string/upi"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/bank"
            android:layout_margin="5dp"
            android:text="@string/bank_transfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <EditText
        android:id="@+id/tt"
        android:padding="13dp"
        android:hint="@string/paytm_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:autofillHints="upi"
        android:inputType="text" />
    <EditText
        android:id="@+id/ifsc"
        android:padding="13dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:hint="@string/ifsc_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:autofillHints="upi"
        android:inputType="text" />
    <EditText
        android:id="@+id/holder"
        android:padding="13dp"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:hint="@string/account_holder_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:autofillHints="upi"
        android:inputType="text" />
    <TextView
        android:id="@+id/minimum"
        android:gravity="center"
        android:text="@string/minimum_withdraw"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/button"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/withdraw"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/process"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
</LinearLayout>