<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/title"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowRadius="2"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/minadd"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/minimum_deposit"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <EditText
            android:id="@+id/minwith"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/minimum_withdraw"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/pid"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/paytm_mid"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <EditText
            android:id="@+id/pkey"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/paytm_mkey"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/rid"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/razorpay_live_key"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <EditText
            android:id="@+id/rkey"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/razorpay_secret_key"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/cid"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/cashfree_app_id"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
        <EditText
            android:id="@+id/charge"
            android:padding="10dp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="#9E9E9E"
            android:hint="@string/per_spin_charge"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/button"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/update"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/process"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
</LinearLayout>