<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/title"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowRadius="2"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/am"
        android:padding="13dp"
        android:hint="@string/deposit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/border"
        android:autofillHints="amount"
        android:inputType="number" />
    <LinearLayout
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/r20"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/_20"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"/>
        <TextView
            android:id="@+id/r50"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/_50"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"/>
        <TextView
            android:id="@+id/r100"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/_100"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"/>
        <TextView
            android:id="@+id/r200"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/_200"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"/>
        <TextView
            android:id="@+id/r500"
            android:padding="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/_500"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"/>
    </LinearLayout>
    <TextView
        android:id="@+id/minimum"
        android:gravity="center"
        android:text="minimum"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="5dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary">
            <Spinner
                android:id="@+id/spinner"
                android:padding="13dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/border"/>
            <LinearLayout
                android:id="@+id/button"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:paddingHorizontal="5dp"
                android:orientation="horizontal"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@color/primary">
                <TextView
                    android:text="@string/add_money"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ProgressBar
                    android:id="@+id/process"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:visibility="gone"
                    android:indeterminateTint="@color/white"
                    android:layout_marginHorizontal="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>