<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/title"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowRadius="2"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/count"
        android:padding="10dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:textColorHint="#9E9E9E"
        android:hint="@string/total_pie_count"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>
    <LinearLayout
        android:id="@+id/button"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_marginVertical="10dp">
        <TextView
            android:text="@string/update"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ProgressBar
            android:id="@+id/process"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
</LinearLayout>