<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">
    <TextView
        android:id="@+id/title"
        android:shadowColor="@color/black"
        android:shadowDy="5"
        android:shadowDx="5"
        android:shadowRadius="2"
        android:padding="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#03a9f4"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">
        <LinearLayout
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="#E1F5FE" />
            <TextView
                android:id="@+id/totalbal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="242"
                android:textSize="30sp"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/rupee" />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/dbal"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/taka" />
                <TextView
                    android:id="@+id/wbal"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="142"
                    android:drawablePadding="5dp"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/taka"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/addmoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#008537"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/add"/>
                <TextView
                    android:textStyle="bold"
                    android:paddingHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_money"
                    android:textColor="#E6E2D8"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/withdraw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#FF6D00"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:rotation="180"
                    android:background="@drawable/add"/>
                <TextView
                    android:textStyle="bold"
                    android:paddingHorizontal="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/withdraw"
                    android:textColor="#E6E2D8"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/txnView"
        tools:listitem="@layout/txn"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>